# build_mcp_client

./: pyproject.toml
_docs/: client build plan and lessons learned.md
_knowledge-general/: crawl4ai_web_crawler_features_usage_knowledge.md  scraped_content_20250216_125247.md  scraped_content_20250217_074410.md  subabase-gitub-full-text-context.txt  tavily-mcp-github-context.txt
src/build_mcp_client/: __init__.py  client.py  config.py  console.py  database.py  llm.py  models.py  utils.py
